--- a/eyojointostringcollection/src/main/res/layout/activity_main.xml
+++ b/eyojointostringcollection/src/main/res/layout/activity_main.xml
@@ -8,12 +8,26 @@
     tools:context=".MainActivity">
 
     <TextView
+        android:id="@+id/tv_main"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginTop="40dp"
+        android:fontFamily="@font/rubik_light"
+        android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="Hello World!" />
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/b_join_to_string"
+        style="@style/Widget.App.Button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:text="Use joinToString"
+        app:layout_constraintEnd_toEndOf="@+id/tv_main"
+        app:layout_constraintStart_toStartOf="@+id/tv_main"
+        app:layout_constraintTop_toBottomOf="@+id/tv_main" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
