--- a/eyojointostringcollection/src/main/res/layout/activity_main.xml
+++ b/eyojointostringcollection/src/main/res/layout/activity_main.xml
@@ -58,9 +58,20 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:text="Use map"
+        android:text="Use map with flatten"
         app:layout_constraintEnd_toEndOf="@+id/b_map"
         app:layout_constraintStart_toStartOf="@+id/b_map"
         app:layout_constraintTop_toBottomOf="@+id/b_map" />
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/b_for_each"
+        style="@style/Widget.App.Button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:text="Use for Each"
+        app:layout_constraintEnd_toEndOf="@+id/b_map_with_flatten"
+        app:layout_constraintStart_toStartOf="@+id/b_map_with_flatten"
+        app:layout_constraintTop_toBottomOf="@+id/b_map_with_flatten" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
