--- a/eyojointostringcollection/src/main/res/layout/activity_main.xml
+++ b/eyojointostringcollection/src/main/res/layout/activity_main.xml
@@ -11,6 +11,7 @@
         android:id="@+id/tv_main"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginHorizontal="16dp"
         android:layout_marginTop="40dp"
         android:fontFamily="@font/rubik_light"
         android:textSize="20sp"
@@ -20,26 +21,15 @@
         tools:text="Hello World!" />
 
     <com.google.android.material.button.MaterialButton
-        android:id="@+id/b_join_to_string"
-        style="@style/Widget.App.Button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:text="Use joinToString"
-        app:layout_constraintEnd_toEndOf="@+id/tv_main"
-        app:layout_constraintStart_toStartOf="@+id/tv_main"
-        app:layout_constraintTop_toBottomOf="@+id/tv_main" />
-
-    <com.google.android.material.button.MaterialButton
         android:id="@+id/b_flat_map"
         style="@style/Widget.App.Button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="40dp"
         android:text="Use flatMap"
-        app:layout_constraintEnd_toEndOf="@+id/b_join_to_string"
-        app:layout_constraintStart_toStartOf="@+id/b_join_to_string"
-        app:layout_constraintTop_toBottomOf="@+id/b_join_to_string" />
+        app:layout_constraintEnd_toEndOf="@+id/tv_main"
+        app:layout_constraintStart_toStartOf="@+id/tv_main"
+        app:layout_constraintTop_toBottomOf="@+id/tv_main" />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/b_map"
@@ -69,9 +59,31 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:text="Use for Each"
+        android:text="Use forEach"
         app:layout_constraintEnd_toEndOf="@+id/b_map_with_flatten"
         app:layout_constraintStart_toStartOf="@+id/b_map_with_flatten"
         app:layout_constraintTop_toBottomOf="@+id/b_map_with_flatten" />
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/b_join_to_string"
+        style="@style/Widget.App.Button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:text="Use joinToString"
+        app:layout_constraintEnd_toEndOf="@+id/b_for_each"
+        app:layout_constraintStart_toStartOf="@+id/b_for_each"
+        app:layout_constraintTop_toBottomOf="@+id/b_for_each" />
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/b_join_to_string_with_distinct"
+        style="@style/Widget.App.Button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:text="Use joinToString with distinct"
+        app:layout_constraintEnd_toEndOf="@+id/b_join_to_string"
+        app:layout_constraintStart_toStartOf="@+id/b_join_to_string"
+        app:layout_constraintTop_toBottomOf="@+id/b_join_to_string" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
