--- a/eyojointostringcollection/src/main/res/layout/activity_main.xml
+++ b/eyojointostringcollection/src/main/res/layout/activity_main.xml
@@ -12,6 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="16dp"
+        android:paddingHorizontal="16dp"
         android:layout_marginTop="40dp"
         android:fontFamily="@font/rubik_light"
         android:textSize="20sp"
